--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bulma": "^0.7.4",
     "parcel-bundler": "^1.11.0",
-    "showdown": "^1.9.0"
+    "showdown": "^1.9.0",
+    "showdown-highlight": "^2.1.3"
   }
 }
