--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "homepage": "https://github.com/abetomo/showdown-bulma-example#readme",
   "dependencies": {
     "bulma": "^0.9.3",
-    "parcel": "^2.0.0-beta.3.1",
+    "parcel": "^2.0.0-rc.0",
     "parcel-bundler": "^1.12.5",
     "showdown": "^1.9.1",
     "showdown-highlight": "^2.1.8"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.0-nightly.778"
+    "@parcel/transformer-sass": "^2.0.0-rc.0"
   }
 }
